--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 Django==1.8.5
+django-crispy-forms==1.5.2
+django-filter==0.11.0
+django-guardian==1.3.1
 django-overextends==0.4.0
 django-phonenumber-field==0.7.2
+djangorestframework==3.3.1
 gunicorn==19.3.0
+Markdown==2.6.3
 phonenumbers==7.1.0
 Pillow==3.0.0
+six==1.10.0
 sphinx-me==0.3
 wheel==0.24.0
